--- a/data/atis/train/seq.in
+++ b/data/atis/train/seq.in
@@ -2803,8 +2803,7 @@ kya denver connecting ke lie atlanta se koee udaan hai
 tuesday kee shaam ko pittsburgh se boston ke lie aakharee flight kaun see hai
 united airlines par denver se san francisco ke lie sabhee somavaar kee udaanen kya hain
 twenty eighth july 1991 ko pittsburgh se san francisco ke lie sabhee udaanen dikhaen
-main mangalavaar subah 8 am se pahale san francisco se pittsburgh 
-ke lie pittsburgh pahunchane vaalee kisee bhee udaan ke baare mein information chaahata hoon
+main mangalavaar subah 8 am se pahale san francisco se pittsburgh ke lie pittsburgh pahunchane vaalee kisee bhee udaan ke baare mein information chaahata hoon
 main denver se philadelphia ke lie flights dekhana chaahata hoon
 kis airline ke paas most business class flights hain
 8 pm ke baad dallas se pittsburgh ke lie ek round trip flight ke lie travel arrangements khojen
